# AWS-agentCore-MCP-notifier

./: .gitignore  LICENSE  README.md  README_EN.md  pyproject.toml  samconfig.toml  template.yaml  tool_schema.json
.kiro/specs/agentcore-feishu-notifier/: design.md  requirements.md  tasks.md
.kiro/steering/: communication.md  implementation.md  product.md  structure.md  tech.md
src/feishu_notifier/: __init__.py  feishu_client.py  handler.py
tests/: __init__.py  test_feishu_client.py  test_handler.py
